--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Tests/Finder/Fixtures/google-results.html
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Tests/Finder/Fixtures/google-results.html
@@ -4,7 +4,7 @@
     <title>Search Results</title>
 </head>
 <body>
-    <div id="search">
+    <div id="center_col">
         <div>
             <ol>
                 <li>
